add JVM garbage collection concepts and G1GC documentation